# ramanalysis

./: Makefile  README.md  README_TEMPLATE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
docs/: conf.py  development.md  index.md  install.md
docs/examples/: example-1_load-spectra.ipynb  example.ipynb  index.md
envs/: dev.yml
ramanalysis/: __init__.py  calibrate.py  calibration.py  example_module.py  load_spectra.py  peak_fitting.py  readers.py  spectra.py  typing.py  utils.py
ramanalysis/tests/: conftest.py  test_calibrate.py  test_peak_fitting.py  test_readers.py  test_spectra.py
ramanalysis/tests/example_data/: 2024-10-04_Wardscalcite_n_n_solid_1000_0_5.csv  README.md
ramanalysis/tests/example_data/Horiba/: CC-124-TAP.txt  CC-125-TAP.txt  CC-1373-TAP.txt
ramanalysis/tests/example_data/Horiba/LabRAM/: CC-124_TAP_532nm.txt  acetonitrile_473nm.txt
ramanalysis/tests/example_data/Horiba/MacroRAM/: polystyrene.txt
ramanalysis/tests/example_data/OpenRAMAN/: 2024-10-04_CC-124-TAP_n_n_solid_10000_0_5.csv  2024-10-04_CC-125-TAP_n_n_solid_10000_0_5.csv  2024-10-04_CC-1373-TAP_n_n_solid_10000_0_5.csv
ramanalysis/tests/example_data/OpenRAMAN/calibration_data/: 2024-08-20_acetonitrileinquartzcuvette_n_n_solid_500_0_5.csv  2024-08-20_acetonitrileinquartzcuvette_n_y_solid_500_0_5.csv  2024-08-27_acetonitrile_n_n_solid_1000_0_5.csv  2024-08-28_acetonitrile_n_n_liquid_1000_0_5.csv  2024-08-28_neon_n_y_liquid_1000_0_5.csv  2024-08-29_acetonitrile_n_n_liquid_1000_0_5.csv  2024-08-29_neon_n_y_liquid_1000_0_5.csv  2024-09-03_acetonitrileinquartzcuvette_n_n_solid_1000_0_5.csv  2024-09-03_neon_n_n_solid_1000_0_5.csv  2024-09-04_acetonitrileinquartzcuvette_n_n_solid_1000_0_5.csv  2024-09-04_neon_n_y_solid_1000_0_5.csv  2024-09-11_acetonitrile_n_n_solid_1000_0_5.csv  2024-09-17_acetonitrile_n_n_solid_1000_0_5.csv  2024-09-17_neon_n_n_solid_1000_0_5.csv  2024-09-18_acetonitrile_n_n_solid_1000_0_5.csv  2024-09-18_neon_n_n_solid_1000_0_5.csv  2024-09-19_acetonitrile_n_n_solid_1000_0_5.csv  2024-09-19_neon_n_n_solid_1000_0_5.csv  2024-09-20_acetonitrile_n_n_solid_1000_0_5.csv  2024-09-20_neon_n_n_solid_1000_0_5.csv  2024-10-03_acetonitrileinquartzcuvette_n_n_solid_1000_0_5.csv  2024-10-03_neon_n_n_solid_1000_0_5.csv  2024-10-04_acetonitrile_n_n_solid_10000_0_5.csv  2024-10-04_neon_n_n_solid_10000_0_5.csv  2024-10-09_acetonitrile_n_n_solid_1000_0_5.csv.csv  2024-10-11_acetonitrileinquartzcuvette_n_n_n_solid_10000_0_5.csv  2024-10-18_acetonitrile_n_n_n_solid_10000_0_5.csv  2024-10-18_acetonitrile_n_n_n_solid_1000_0_5.csv  2024-10-18_neon_n_n_n_solid_1000_0_5.csv  2024-10-29_acetonitrile-control_n_n_n_solid_10000_0_5.csv  2024-10-29_neon-control_n_n_n_solid_1000_0_5.csv
ramanalysis/tests/example_data/Renishaw/: CC-125_TAP_multipoint.txt  CC-125_TAP_singlepoint.txt  cell_6.csv
ramanalysis/tests/example_data/Wasatch/: acetonitrile.csv
ramanalysis/tests/example_data/synthetic_data/: fake_spectrum_0.txt  fake_spectrum_1.txt  fake_spectrum_2.txt  fake_spectrum_3.txt  fake_spectrum_4.txt  fake_spectrum_5.txt  fake_spectrum_6.txt  fake_spectrum_7.txt  fake_spectrum_8.txt  fake_spectrum_9.txt
(+27 files in other folders)
